Added log displaing

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -1,6 +1,6 @@
 <h1>Greeting</h1>
 <div ng-show="authenticated">
-	<p>The ID is {{greeting.id}}</p>
+	<p>The log is <pre>{{greeting.id}}</pre></p>
 	<p>The content is {{greeting.content}}</p>
 </div>
 <div  ng-show="!authenticated">
